apps/base/filebrowser/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filebrowser
  namespace: apps

spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
      task: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
        task: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser
          ports:
            - containerPort: 80
          volumeMounts:
            - name: filebrowser-storage
              mountPath: /srv
      volumes:
        - name: filebrowser-storage
          persistentVolumeClaim:
            claimName: filebrowser-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: apps

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: filebrowser
    task: filebrowser
