apps/base/filebrowser/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: app-filebrowser

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`filebrowser.cluster.arpa`)
      kind: Rule
      services:
        - name: filebrowser
          port: 8080
